--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -11,6 +11,11 @@
     align-items: center;
 }
 
+@mixin noDrag() {
+    -webkit-user-drag: none;
+    user-select: none;
+}
+
 .content-centered {
     @include centeredFlex();
 }
@@ -97,6 +102,7 @@ $duration) {
         opacity: 1;
         color: black;
         transition: opacity .7s ease-in-out, color .25s linear;
+        @include noDrag();
         &:hover {
             color: rgba(0, 0, 0, 0.6);
         }
@@ -197,9 +203,8 @@ $duration) {
     opacity: 0;
     transition: opacity 1.6s ease-in-out;
     z-index: 5;
-    -webkit-user-drag: none;
-    user-select: none;
     pointer-events: none;
+    @include noDrag();
     &-despair {
         top: 79%;
         left: -70%;
@@ -228,6 +233,7 @@ $duration) {
             margin: 0;
             @include shorttText();
             cursor: pointer;
+            @include noDrag();
         }
     }
     &-nav {
@@ -235,6 +241,7 @@ $duration) {
         opacity: 0;
         &-option {
             @include shorttText();
+            @include noDrag();
             cursor: pointer;
             transition: color 0.25s linear;
             &:hover {
@@ -370,6 +377,7 @@ $duration) {
                 padding: 5px;
                 cursor: pointer;
                 animation-delay: 0.3s;
+                @include noDrag();
             }
         }
         &-confirm {
@@ -392,6 +400,7 @@ $duration) {
                 padding: 5px;
                 cursor: pointer;
                 animation-delay: 0.3s;
+                @include noDrag();
             }
         }
         &-speech {
@@ -571,6 +580,7 @@ $duration) {
             left: 0;
             margin: 3vh 3vw;
             height: 378px; //38vh
+            @include noDrag();
         }
     }
     &-handle {
@@ -578,6 +588,7 @@ $duration) {
         transform-origin: 19.8% 95%;
         height: 97.59px;
         transform: rotate(calc(0deg - 25.5deg));
+        @include noDrag();
     }
     &-comet {
         position: fixed;
@@ -682,6 +693,7 @@ $duration) {
             transform: translate(-50%, -50%);
             margin: 0;
             color: white;
+            @include noDrag();
         }
          :root {
             --portalDeg: 1;
