--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -560,6 +560,15 @@ $duration) {
             border: 1px solid #000;
         }
     }
+    &-arrow {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        pointer-events: none;
+        @include noDrag();
+    }
     &-svg {
         position: absolute;
         width: 100%;
@@ -589,6 +598,7 @@ $duration) {
         height: 97.59px;
         transform: rotate(calc(0deg - 25.5deg));
         @include noDrag();
+        transition: opacity 0.5s linear;
     }
     &-comet {
         position: fixed;
@@ -683,6 +693,7 @@ $duration) {
         left: 0;
         background-repeat: no-repeat;
         transform: translate(-50%, -50%);
+        transition: opacity 1s linear;
         &-text {
             @include shorttText();
             text-shadow: 0px 0px 1px rgba(0, 0, 0, 1);
