--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -536,9 +536,41 @@ $duration) {
         //transform: translateZ(0);
         background-image: url("../../assets/space.png");
     }
+    &-project {
+        width: 100%;
+        min-height: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        overflow-y: auto;
+        overflow-x: hidden;
+        background: rgba(0, 0, 0, 0.4);
+        opacity: 0;
+        transition: opacity 0.5s linear;
+        &-row {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+        &-image {
+            width: 75%;
+            border: 2px solid white;
+            margin: 10% 12.5%;
+            margin-bottom: 0px;
+        }
+        &-title {
+            color: white;
+            @include shorttText();
+            margin: 0;
+            text-align: center;
+            font-size: 4em;
+        }
+    }
     &-slider {
         position: absolute !important;
         bottom: 0;
+        z-index: 7;
         opacity: 0;
         & .rs-control {
             margin: 3vh 3vw;
@@ -562,12 +594,15 @@ $duration) {
     }
     &-arrow {
         position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
         pointer-events: none;
         @include noDrag();
+        width: 70px;
+        height: 70px;
+        bottom: calc(3vh + 207px);
+        left: calc(3vw + 113px);
+        z-index: 1;
+        opacity: 1;
+        transition: opacity 0.5s linear;
     }
     &-svg {
         position: absolute;
