--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -115,7 +115,7 @@ body {
 
     &-container {
       opacity: 0;
-      transition: width 0.75s ease-out, height 0.75s ease-out, opacity 2s ease-in-out, border 1.45s ease-in-out;
+      transition: width 0.75s ease-out, height 0.75s ease-out, opacity 2s ease-in-out, border 1.45s ease-in-out, transform 1.25s ease-out;
       //overflow: hidden;
       width: 100%;
       height: 100%;
@@ -124,6 +124,10 @@ body {
       left: 50%;
       transform: translate(-50%, -50%) translateZ(0);
       border: 7px solid black;
+
+      &-skew {
+        transform: translate(-50%, -50%) translateZ(0) skew(0deg, 18deg);
+      }
     }
   }
 
@@ -330,7 +334,7 @@ body {
   }
 
   &-projects {
-    background: white;
+    background: black;
 
     &-wrapper {}
 
