--- a/css/rectangle/rectangle.scss
+++ b/css/rectangle/rectangle.scss
@@ -25,6 +25,8 @@
 }
 @import url('https://fonts.googleapis.com/css?family=Montserrat:700');
 
+@import 'partials/book.scss';
+
 body {
   margin: 0;
   overflow: hidden;
@@ -112,6 +114,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: 1s ease-out all;
 
     &-container {
       opacity: 0;
@@ -126,7 +129,8 @@ body {
       border: 7px solid black;
 
       &-skew {
-        transform: translate(-50%, -50%) translateZ(0) skew(0deg, 18deg);
+        transform: translate(-50%, -50%) translateZ(0) skew(0deg, 18.6deg);
+        border-radius: 5px;
       }
     }
   }
@@ -334,7 +338,11 @@ body {
   }
 
   &-projects {
-    background: black;
+    background: red; //black
+    //width: 235px;
+    //height: 378.5px;
+    height: 401px;
+    border-radius: 5px;
 
     &-wrapper {}
 
